--- a/src/main/resources/templates/Plate/create.html
+++ b/src/main/resources/templates/Plate/create.html
@@ -26,7 +26,7 @@
             <h5 class="card-title mb-0">Създай тарелка</h5>
           </div>
           <div class="card-body">
-            <form action="/plate/submit" method="post">
+            <form action="/plate/submit"  method="post" enctype="multipart/form-data">
               <div class="form-group">
                 <label for="name">Име:</label>
                 <input type="text" id="name" name="name"
@@ -43,6 +43,10 @@
                 <label for="price">Цена:</label>
                 <input type="number" id="price" name="price" step="0.01" min="0.01" required
                        th:value="${plate.price}"/>
+              </div>
+              <div class="form-group">
+                <label for="photo">Снимка:</label>
+                <input type="file" id="photo" name="file" />
               </div>
               <div class="text-center">
                 <button type="submit" class="btn btn-primary">Създай</button>
