--- a/src/main/resources/templates/Query/show.html
+++ b/src/main/resources/templates/Query/show.html
@@ -158,7 +158,7 @@
                                     </div>
                                     <input type="hidden" id="paymentAmountInput" name="paymentAmount">
                                     <input type="hidden" id="quantityInputList" name="quantityInputList">
-                                    <input type="hidden" id="priceInputList" name="priceInput">
+                                    <input type="hidden" id="priceInputList" name="priceInputList">
 
 
 
