--- a/src/main/resources/templates/Invoice/ShowId.html
+++ b/src/main/resources/templates/Invoice/ShowId.html
@@ -25,6 +25,12 @@
                         Принтирай <i class="fas fa-print"></i>
                     </button>
                 </div>
+                <span th:text="#{lang.change}"></span>:
+                <select id="locales">
+                    <option value=""></option>
+                    <option value="en" th:text="#{lang.eng}"></option>
+                    <option value="bg" th:text="#{lang.bg}"></option>
+                </select>
                 <div class="col-md-6 text-end">
 
                 </div>
@@ -80,8 +86,10 @@
                                 <table class="table">
                                     <thead>
                                     <tr>
-                                        <th>ID</th>
-                                        <th>Наименувание</th>
+<!--                                        //*************************************************************-->
+                                        <th th:text="#{label.id}"></th>
+                                        <th th:text="#{label.name}"></th>
+<!--                                        //*************************************************************-->
                                         <th>Количество</th>
                                         <th>ЕД.Цена без ДДС</th>
                                         <th>ДДС %</th>
@@ -161,3 +169,15 @@
 </body>
 <script src="/js/invoiceId.js"></script>
 </html>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
+</script>
+<script type="text/javascript">
+$(document).ready(function() {
+    $("#locales").change(function () {
+        var selectedOption = $('#locales').val();
+        if (selectedOption != ''){
+            window.location.replace('international?lang=' + selectedOption);
+        }
+    });
+});
+</script>
