--- a/src/main/resources/templates/Client/edit.html
+++ b/src/main/resources/templates/Client/edit.html
@@ -35,6 +35,13 @@
                                 <div class="error-message"></div>
                             </div>
                             <div class="form-group">
+                                <label for="englishBusinessName">Име на фирма на ангрийски език:</label>
+                                <input type="text" id="englishBusinessName" name="englishBusinessName" pattern=".{5,}"
+                                       title="Моля въведете името на фирмата на английски език с поне 5 символа!" required
+                                       th:field="*{englishBusinessName}"/>
+                                <div class="error-message"></div>
+                            </div>
+                            <div class="form-group">
                                 <label for="idNumEIK">Ид. Номер по ЕИК:</label>
                                 <input type="text" id="idNumEIK" name="idNumEIK" pattern=".{5,}"
                                        title="Номера по ЕИК трябва да бъде последователност от 5 цифри!" required
@@ -57,6 +64,11 @@
                                 <label for="address">Адрес:</label>
                                 <input type="text" id="address" name="address" required
                                        th:field="*{address}"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="englishAddress">Адрес на английски език:</label>
+                                <input type="text" id="englishAddress" name="englishAddress" required
+                                       th:field="*{englishAddress}"/>
                             </div>
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" th:field="*{isBulgarianClient}" name="isBulgarianClient" value=true id="isBulgarianClient">
