--- a/src/main/resources/templates/Client/show.html
+++ b/src/main/resources/templates/Client/show.html
@@ -44,9 +44,11 @@
                   <tr>
                     <th>ID</th>
                     <th>Име на фирма</th>
+                    <th>Име на фирма - англ.ез.</th>
                     <th>Ид. Номер по ЕИК</th>
                     <th>Ид. Номер по ДДС</th>
                     <th>Адрес</th>
+                    <th>Адрес на англ.ез.</th>
                     <th>Български клиент</th>
                     <th>МОЛ</th>
                   </tr>
@@ -55,9 +57,11 @@
                   <tr th:each="client : ${clients}" data-id="${client.id}" class="client-row">
                     <td th:text="${client.id}"></td>
                     <td th:text="${client.businessName}"></td>
+                    <td th:text="${client.englishBusinessName}"></td>
                     <td th:text="${client.idNumEIK}"></td>
                     <td th:text="${client.hasIdNumDDS ? 'BG' + client.idNumEIK : 'няма'}"></td>
                     <td th:text="${client.address}"></td>
+                    <td th:text="${client.englishAddress}"></td>
                     <td th:text="${client.isBulgarianClient ? 'ДА' : 'НЕ'}"></td>
                     <td th:text="${client.mol}"></td>
                     <td>
