--- a/src/main/resources/templates/Package/create.html
+++ b/src/main/resources/templates/Package/create.html
@@ -49,6 +49,13 @@
                                 <div class="error-message"></div>
                             </div>
                             <div class="form-group">
+                                <label for="englishName">Име на английски език:</label>
+                                <input type="text" id="englishName" name="englishName" pattern=".{10,}"
+                                       title="Моля въведете името на кашона с поне 10 символа!" required
+                                       th:value="${package != null ? package.englishName : ''}"/>
+                                <div class="error-message"></div>
+                            </div>
+                            <div class="form-group">
                                 <label for="availableQuantity">Налични бройки:</label>
                                 <input type="number" id="availableQuantity" name="availableQuantity" min="1" required
                                        th:value="${package != null ? package.availableQuantity : ''}"/>
