--- a/src/main/resources/templates/Package/edit.html
+++ b/src/main/resources/templates/Package/edit.html
@@ -48,6 +48,13 @@
                                 <div class="error-message" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
                             </div>
                             <div class="form-group">
+                                <label for="englishName">Име:</label>
+                                <input type="text" id="englishName" name="englishName" pattern=".{10,}"
+                                       title="Моля въведете името на опаковката на английски език с поне 10 символа!" required
+                                       th:field="*{englishName}" />
+                                <div class="error-message" th:if="${#fields.hasErrors('englishName')}" th:errors="*{englishName}"></div>
+                            </div>
+                            <div class="form-group">
                                 <label for="availableQuantity">Налични бройки:</label>
                                 <input type="number" id="availableQuantity" name="availableQuantity" min="1" required
                                        th:field="*{availableQuantity}" />
