--- a/src/main/resources/templates/Client/edit.html
+++ b/src/main/resources/templates/Client/edit.html
@@ -87,6 +87,11 @@
                                 <input type="text" id="mol" name="address"
                                        th:field="*{mol}"/>
                             </div>
+                            <div class="form-group">
+                                <label for="englishMol">МОЛ на английски език:</label>
+                                <input type="text" id="englishMol" name="address"
+                                       th:field="*{englishMol}"/>
+                            </div>
                             <div class="text-center">
                                 <button type="submit" class="btn btn-primary">Редактирай</button>
                             </div>
