--- a/src/main/resources/templates/Client/show.html
+++ b/src/main/resources/templates/Client/show.html
@@ -51,6 +51,7 @@
                     <th>Адрес на англ.ез.</th>
                     <th>Български клиент</th>
                     <th>МОЛ</th>
+                    <th>МОЛ - англ.ез.</th>
                   </tr>
                   </thead>
                   <tbody>
@@ -64,6 +65,7 @@
                     <td th:text="${client.englishAddress}"></td>
                     <td th:text="${client.isBulgarianClient ? 'ДА' : 'НЕ'}"></td>
                     <td th:text="${client.mol}"></td>
+                    <td th:text="${client.englishMol}"></td>
                     <td>
                       <form th:action="@{'/client/delete/' + ${client.id}}" method="post"
                             th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да изтриете клинет с id: ' + ${client.id} + '?\');'">
