--- a/src/main/resources/templates/Invoice/ShowId.html
+++ b/src/main/resources/templates/Invoice/ShowId.html
@@ -49,7 +49,7 @@
                                         <strong th:text=" #{label.address}"></strong>
                                         <strong th:text="${clientAddress}"></strong>
                                     </h5>
-                                    <h5><strong th:text="#{label.MOL} +'  '+ ${clientDTOS[orderDTO.clientId - 1].mol}"></strong>
+                                    <h5><strong th:text="#{label.MOL} +'  '+ ${clientMOL}"></strong>
                                     </h5>
                                 </div>
 
