--- a/src/main/resources/templates/Client/create.html
+++ b/src/main/resources/templates/Client/create.html
@@ -36,8 +36,8 @@
               </div>
               <div class="form-group">
                 <label for="englishName">Име на фирма на английски език:</label>
-                <input type="text" id="englishName" name="englishName" pattern=".{5,}"
-                       title="Моля въведете името на фирмата на английски език с поне 5 символа!" required
+                <input type="text" id="englishName" name="englishName"  pattern="[a-zA-Z0-9\s!@#$%^&*()-_=+]*"
+                       title="Моля въведете името на фирмата на английски език с латински букви, цифри, интервали и специални символи!" required
                        th:field="${client.englishBusinessName}"/>
                 <div class="error-message"></div>
               </div>
@@ -67,7 +67,8 @@
               </div>
               <div class="form-group">
                 <label for="englishAddress">Адрес на англсийски език:</label>
-                <input type="text" id="englishAddress" name="englishAddress" required
+                <input type="text" id="englishAddress" name="englishAddress"   pattern="[a-zA-Z0-9\s]*$"
+                       title="Моля въведете името на адреса на английски език с латински букви!" required
                        th:field="${client.englishAddress}"/>
               </div>
               <div class="form-check">
@@ -89,7 +90,8 @@
               </div>
               <div class="form-group">
                 <label for="englishMol">МОЛ на английски език:</label>
-                <input type="text" id="englishMol" name="address"
+                <input type="text" id="englishMol" name="address"   pattern="[a-zA-Z0-9\s]*$"
+                       title="Моля въведете името на МОЛ-а на английски език с латински букви!" required
                        th:field="${client.englishMol}"/>
               </div>
               <div class="text-center">
