--- a/src/main/resources/templates/Product/show.html
+++ b/src/main/resources/templates/Product/show.html
@@ -23,7 +23,7 @@
                 <div class="col-lg-8 mx-auto">
                     <div class="card custom-card-width-lg">
                         <div class="card-header">
-                            <h5 class="card-title mb-0">Всички Продукти</h5>
+                            <h5 class="card-title mb-0">Всички Потребители</h5>
                         </div>
                         <div class="text-center">
                             <a href="/product/create" class="btn btn-primary">Добави Продукт</a>
@@ -50,8 +50,8 @@
                                     </thead>
                                     <tbody>
                                     <tr th:each="product, iter : ${products}" data-id="${product.id}" class="plate-row">
-                                        <td th:if="${product.packageId == packages[iter.index]?.id}">
-                                            <img th:src="@{${backendBaseUrl} + '/'+ ${packages[iter.index]?.photo}}" alt="no image" height="100" width="100">
+                                        <td >
+                                            <img th:src="@{${backendBaseUrl} + '/'+ ${productPackageMapImages.get(product.packageId)}}" alt="no image" height="100" width="100">
                                         </td>
                                         <td th:text="${product.id}"></td>
                                         <td th:text="${productPackageMap.get(product.packageId)}"></td>
