--- a/src/main/resources/templates/MaterialOrder/create.html
+++ b/src/main/resources/templates/MaterialOrder/create.html
@@ -51,22 +51,22 @@
                             <div class="form-group">
                             <div id="plateDropdown" style="display: none;">
                                 <label for="materialId">Тарелки:</label>
-                                <select class="form-select" size="3" aria-label="size 3 select example" id="plateId" name="materialId">
+                                <select  class="js-example-basic-single" id="plateId" name="materialId">
                                     <option th:each="plate : ${plates}" th:value="${plate.id}" th:text="${plate.id} + ' - ' + ${plate.name}"></option>
                                 </select>
                             </div>
                             <div id="cartonDropdown" style="display: none;">
                                 <label for="materialId">Кашони:</label>
-                                <select class="form-select" size="3" aria-label="size 3 select example" id="materialId" name="materialId">
+                                <select  class="js-example-basic-single" id="materialId" name="materialId">
                                     <option th:each="carton : ${cartons}" th:value="${carton.id}" th:text="${carton.id} + ' - ' + ${carton.name}"></option>
                                 </select>
                             </div>
-                            <div id="packageDropdown" style="display: none;">
-                                <label for="materialId">Кутии:</label>
-                                <select class="form-select" size="3" aria-label="size 3 select example" id="packageId" name="materialId">
-                                    <option th:each="package : ${packages}" th:value="${package.id}" th:text="${package.id} + ' - ' + ${package.name}"></option>
-                                </select>
-                            </div>
+                                <div id="packageDropdown" style="display: none;">
+                                    <label for="materialId">Кутии:</label>
+                                    <select class="js-example-basic-single" id="packageId" name="materialId">
+                                        <option th:each="package : ${packages}" th:value="${package.id}" th:text="${package.id} + ' - ' + ${package.name}"></option>
+                                    </select>
+                                </div>
                             </div>
                             <div class="form-group">
                                 <label for="orderedQuantity">Брой:</label>
@@ -84,7 +84,6 @@
     </div>
 </div>
 <script src="js/app.js"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
         $(document).ready(function() {
             $('input[type=radio][name=materialType]').change(function() {
@@ -94,6 +93,21 @@
                 $('#packageDropdown').toggle(materialType === 'PACKAGE');
             });
         });
+
     </script>
+
+<script>
+       $(document).ready(function() {
+           $('#packageId').select2();
+       });
+
+       $(document).ready(function() {
+           $('#materialId').select2();
+       });
+
+       $(document).ready(function() {
+           $('#plateId').select2();
+       });
+   </script>
 </body>
 </html>
