--- a/src/main/resources/templates/fragments/links.html
+++ b/src/main/resources/templates/fragments/links.html
@@ -10,7 +10,9 @@
 <link rel="shortcut icon" href="/static/img/icons/icon-48x48.png"/>
 <link rel="canonical" href="https://demo-basic.adminkit.io/"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
+<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
 
 <link href="/css/app.css" rel="stylesheet">
 <link href="/js/app.css" rel="stylesheet">
