replace <select> with select2 everywhere

--- a/src/main/resources/templates/Package/create.html
+++ b/src/main/resources/templates/Package/create.html
@@ -2,25 +2,11 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Responsive Admin &amp; Dashboard Template based on Bootstrap 5">
-    <meta name="author" content="AdminKit">
-    <meta name="keywords"
-          content="adminkit, bootstrap, bootstrap 5, admin, dashboard, template, responsive, css, sass, html, theme, front-end, ui kit, web">
+    <!--    LINKS  -->
+    <th:block th:include="~{fragments/links}"></th:block>
 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="shortcut icon" href="/static/img/icons/icon-48x48.png"/>
-
-    <link rel="canonical" href="https://demo-basic.adminkit.io/"/>
-
-    <title> Кутии </title>
-
-    <link href="/css/app.css" rel="stylesheet">
+    <title> Поръчка на материали </title>
     <link href="/css/form.css" rel="stylesheet">
-
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -97,5 +83,13 @@
     </div>
 </div>
 <script src="/js/app.js"></script>
+<script>
+$(document).ready(function() {
+$('#cartonId').select2();
+});
+$(document).ready(function() {
+$('#plateId').select2();
+});
+</script>
 </body>
 </html>
