--- a/src/main/resources/templates/OrderProduct/addProduct.html
+++ b/src/main/resources/templates/OrderProduct/addProduct.html
@@ -75,4 +75,9 @@
     </div>
 </div>
 <script src="/js/app.js"></script>
+<script>
+$(document).ready(function() {
+$('#packageId').select2();
+});
+</script>
 </body>
