--- a/src/main/resources/templates/OrderProduct/create.html
+++ b/src/main/resources/templates/OrderProduct/create.html
@@ -28,18 +28,18 @@
                     </div>
                     <div class="card-body">
                         <form action="/order/submit" method="post">
+                            <center>
                             <div class="form-group">
                                 <label for="clientId" style="width: 100%;">Клинети:</label>
-                                <select class="form-select" size="6" aria-label="size 6 select example" id="clientId" name="clientId" style="width: 100%;" required>
+                                <select class="form-select" id="clientId" name="clientId" style="width: 80%;" required>
                                     <option th:each="client : ${clients}" th:value="${client.id}" th:text="${client.businessName}"></option>
                                 </select>
                             </div>
                             <div class="form-group">
-                                <center>
                             <label for="orderDate">Дата на поръчка:</label>
                             <input type="date" name="orderDate" id="orderDate"  th:field="${order.orderDate}" required>
-                                </center>
                             </div>
+                            </center>
                             <div class="text-center">
                                 <button type="submit" class="btn btn-primary">Запази и добави продукти</button>
                             </div>
@@ -51,5 +51,10 @@
     </div>
 </div>
 <script src="/js/app.js"></script>
+<script>
+$(document).ready(function() {
+$('#clientId').select2();
+});
+</script>
 </body>
 </html>
