--- a/src/main/resources/templates/OrderProduct/edit.html
+++ b/src/main/resources/templates/OrderProduct/edit.html
@@ -28,18 +28,19 @@
           </div>
           <div class="card-body">
             <form th:action="@{'/order/edit/' + ${order.id}}" method="get" th:object="${order}">
+              <center>
               <div class="form-group">
+
                 <label for="clientId" style="width: 100%;">Клинети:</label>
-                <select class="form-select" size="6" aria-label="size 6 select example" id="clientId" name="clientId" style="width: 100%;" required>
+                <select id="clientId" name="clientId" style="width: 80%;" required>
                   <option th:each="client : ${clients}" th:value="${client.id}" th:text="${client.businessName}"></option>
                 </select>
               </div>
               <div class="form-group">
-                <center>
                   <label for="orderDate">Дата на поръчка:</label>
                   <input type="date" name="orderDate" id="orderDate"  th:field="*{orderDate}" required>
-                </center>
               </div>
+              </center>
               <div class="text-center">
                 <button type="submit" class="btn btn-primary">Запази и добави продукти</button>
               </div>
@@ -51,5 +52,10 @@
   </div>
 </div>
 <script src="/js/app.js"></script>
+<script>
+$(document).ready(function() {
+$('#clientId').select2();
+});
+</script>
 </body>
 </html>
