--- a/src/main/resources/templates/Product/create.html
+++ b/src/main/resources/templates/Product/create.html
@@ -60,5 +60,10 @@
     </div>
 </div>
 <script src="/js/app.js"></script>
+<script>
+$(document).ready(function() {
+$('#packageId').select2();
+});
+</script>
 </body>
 </html>
