--- a/src/main/resources/templates/Package/edit.html
+++ b/src/main/resources/templates/Package/edit.html
@@ -49,7 +49,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="englishName">Име на английски език:</label>
-                                <input type="text" id="englishName" name="englishName"  pattern="[a-zA-Z0-9\s]*$"
+                                <input type="text" id="englishName" name="englishName"  pattern="[a-zA-Z0-9\s!@#$%^&*()_+-=[{]};:'|,<.>?]*$"
                                        title="Моля въведете името на опаковката на английски език с латински букви!"
                                        required th:field="*{englishName}" />
                                 <div class="error-message" th:if="${#fields.hasErrors('englishName')}" th:errors="*{englishName}"></div>
