--- a/src/main/resources/templates/Client/edit.html
+++ b/src/main/resources/templates/Client/edit.html
@@ -36,7 +36,8 @@
                             </div>
                             <div class="form-group">
                                 <label for="englishBusinessName">Име на фирма на ангрийски език:</label>
-                                <input type="text" id="englishBusinessName" name="englishBusinessName"  pattern="[a-zA-Z0-9\s]*$"
+                                <input type="text" id="englishBusinessName" name="englishBusinessName"  pattern="[a-zA-Z0-9\s!@#$%^&*()_+-=[{]};:'|,<.>?]*$"
+
                                        title="Моля въведете името на фирмата на английски език с латински букви!" required
                                        th:field="*{englishBusinessName}"/>
                                 <div class="error-message"></div>
@@ -67,7 +68,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="englishAddress">Адрес на английски език:</label>
-                                <input type="text" id="englishAddress" name="englishAddress" required
+                                <input type="text" id="englishAddress" name="englishAddress" pattern="[a-zA-Z0-9\s!@#$%^&*()_+-=[{]};:'|,<.>?]*$" required
                                        th:field="*{englishAddress}"/>
                             </div>
                             <div class="form-check">
@@ -89,7 +90,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="englishMol">МОЛ на английски език:</label>
-                                <input type="text" id="englishMol" name="address"  pattern="[a-zA-Z0-9\s]*$"
+                                <input type="text" id="englishMol" name="address" pattern="[a-zA-Z0-9\s!@#$%^&*()_+-=[{]};:'|,<.>?]*$"
                                        title="Моля въведете името на МОЛ-а на английски език с латински букви!" required
                                        th:field="*{englishMol}"/>
                             </div>
