--- a/src/main/resources/templates/Package/create.html
+++ b/src/main/resources/templates/Package/create.html
@@ -25,6 +25,9 @@
                     <div class="card-header">
                         <h5 class="card-title mb-0">Създай Кутия</h5>
                     </div>
+                    <div class="error-message" th:if="${error}">
+                        <p th:text="${error}"></p>
+                    </div>
                     <div class="card-body">
                         <form th:action="@{/package/submit}" method="post" enctype="multipart/form-data">
                             <div class="form-group">
@@ -36,10 +39,11 @@
                             </div>
                             <div class="form-group">
                                 <label for="englishName">Име на английски език:</label>
-                                <input type="text" id="englishName" name="englishName"  pattern="[a-zA-Z0-9\s]*$"
+                                <input type="text" id="englishName" name="englishName"  pattern="[a-zA-Z0-9\s!@#$%^&*()_+-=[{]};:'|,<.>?]*$"
                                        title="Моля въведете името на кашона с латински букви!" required
                                        th:value="${package != null ? package.englishName : ''}"/>
                                 <div class="error-message"></div>
+
                             </div>
                             <div class="form-group">
                                 <label for="availableQuantity">Налични бройки:</label>
