--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,21 +7,14 @@
         <ul class="sidebar-nav">
             <li class="sidebar-item">
                 <a id="nav-index" class="sidebar-link" href="/index">
-                    <i class="align-middle" data-feather="sliders"></i> <span
-                        class="align-middle">Главна страница</span>
+                    <i class="align-middle" data-feather="sliders"></i> <span class="align-middle">Главна страница</span>
                 </a>
             </li>
 
-            <li class="sidebar-item">
-                <a id="nav-login" class="sidebar-link" href="/login">
-                    <i class="align-middle" data-feather="log-in"></i> <span class="align-middle">Впиши се</span>
-                </a>
-            </li>
 
             <li class="sidebar-item">
                 <a id="nav-register" class="sidebar-link" href="/register">
-                    <i class="align-middle" data-feather="user-plus"></i> <span
-                        class="align-middle">Регистрирай се</span>
+                    <i class="align-middle" data-feather="user-plus"></i> <span class="align-middle">Регистрирай се</span>
                 </a>
             </li>
             <li class="sidebar-item">
@@ -34,11 +27,13 @@
                     <i class="align-middle" data-feather="user-plus"></i> <span class="align-middle">Клиенти</span>
                 </a>
             </li>
+
             <li class="sidebar-item">
                 <a id="nav-show" class="sidebar-link" href="/show">
                     <i class="align-middle" data-feather="book"></i> <span class="align-middle">Кашони</span>
                 </a>
             </li>
+
             <li class="sidebar-item">
                 <a id="nav-package-show" class="sidebar-link" href="/package/show">
                     <i class="align-middle" data-feather="book"></i> <span class="align-middle">Кутии</span>
