--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,24 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="">
-
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <!--    LINKS  -->
     <th:block th:include="~{fragments/links}"></th:block>
-
     <title> Lukeria меню </title>
-    <style>
-        .custom-card-width {
-            width: 80%;
-            margin: 0 auto; /* Optional: Centers the card horizontally */
-        }
-    </style>
 </head>
-
 <body>
 <div class="wrapper">
     <!--    HEADER  -->
     <th:block th:include="~{fragments/header}"></th:block>
-
 
     <div class="main">
         <nav class="navbar navbar-expand navbar-light navbar-bg">
@@ -74,13 +64,12 @@
 
     </div>
 </div>
-<script src="js/app.js"></script>
-</body>
-
-</html>
+<script src="/js/app.js"></script>
 <style>
 	.custom-card-width {
   width: 80%;
   margin: 0 auto; /* Optional: Centers the card horizontally */
 }
 </style>
+</body>
+</html>
